--- a/pom.xml
+++ b/pom.xml
@@ -2,19 +2,47 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>se.uhr.nya.test</groupId>
-	<artifactId>feed.api</artifactId>
+	<groupId>com.github.attiand</groupId>
+	<artifactId>feed-archive-stream</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
-	<name>Implments a simple API for atom feeds, intended to be used with Neoload</name>
+	<name>Implements a simple API for atom feeds, intended to be used with Neoload</name>
 	<url>http://maven.apache.org</url>
 
+	<properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
 	<dependencies>
+		<dependency>
+			<groupId>com.rometools</groupId>
+			<artifactId>rome</artifactId>
+			<version>1.7.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.2</version>
+		</dependency>
+
+		<!-- test -->
+
 		<dependency>
 			<groupId>de.helwich.junit</groupId>
 			<artifactId>junit-jasmine-runner</artifactId>
 			<version>0.1.3</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-all</artifactId>
+			<version>1.3</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 </project>
