--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
 			<version>4.5.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>net.sf.saxon</groupId>
+			<artifactId>Saxon-HE</artifactId>
+			<version>9.7.0-15</version>
+		</dependency>
+
 		<!-- test -->
 
 		<dependency>
