--- a/pom.xml
+++ b/pom.xml
@@ -45,10 +45,9 @@
 		<!-- test -->
 
 		<dependency>
-			<groupId>de.helwich.junit</groupId>
-			<artifactId>junit-jasmine-runner</artifactId>
-			<version>0.1.3</version>
-			<scope>test</scope>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
 		</dependency>
 
 		<dependency>
