--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>com.github.attiand</groupId>
 	<artifactId>feed-archive-stream</artifactId>
-	<version>1.1-SNAPSHOT</version>
+	<version>1.0-SNAPSHOT</version>
 
 	<description>Implements a stream API for atom feeds</description>
 	<url>https://github.com/attiand/feed-archive-stream</url>
@@ -121,6 +121,17 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-release-plugin</artifactId>
+			  <version>2.5.3</version>
+			  <configuration>
+			    <autoVersionSubmodules>true</autoVersionSubmodules>
+			    <useReleaseProfile>false</useReleaseProfile>
+			    <releaseProfiles>release</releaseProfiles>
+			    <goals>deploy</goals>
+			  </configuration>
+			</plugin>			
 			<plugin>
 				<groupId>org.sonatype.plugins</groupId>
 				<artifactId>nexus-staging-maven-plugin</artifactId>
