--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.github.attiand</groupId>
 	<artifactId>feed-archive-stream</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
+    <name>Feed Archive Stream API</name>
 	<description>Implements a stream API for atom feeds</description>
 	<url>https://github.com/attiand/feed-archive-stream</url>
 
@@ -20,6 +22,15 @@
 		<developerConnection>scm:git:git@github.com:attiand/feed-archive-stream.git</developerConnection>
 		<tag>HEAD</tag>
 	</scm>
+
+	<developers>
+		<developer>
+			<name>Mattias Andersson</name>
+			<email>andermaj@gmail.com</email>
+			<organization>github</organization>
+			<organizationUrl>https://github.com/attiand</organizationUrl>
+		</developer>
+	</developers>
 
 	<licenses>
 		<license>
@@ -122,16 +133,16 @@
 				</executions>
 			</plugin>
 			<plugin>
-			  <groupId>org.apache.maven.plugins</groupId>
-			  <artifactId>maven-release-plugin</artifactId>
-			  <version>2.5.3</version>
-			  <configuration>
-			    <autoVersionSubmodules>true</autoVersionSubmodules>
-			    <useReleaseProfile>false</useReleaseProfile>
-			    <releaseProfiles>release</releaseProfiles>
-			    <goals>deploy</goals>
-			  </configuration>
-			</plugin>			
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.3</version>
+				<configuration>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
+					<useReleaseProfile>false</useReleaseProfile>
+					<releaseProfiles>release</releaseProfiles>
+					<goals>deploy</goals>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.sonatype.plugins</groupId>
 				<artifactId>nexus-staging-maven-plugin</artifactId>
