--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
 
 	<groupId>com.github.attiand</groupId>
 	<artifactId>feed-archive-stream</artifactId>
-	<version>1.1-SNAPSHOT</version>
+	<version>1.0.1-SNAPSHOT</version>
 
-    <name>Feed Archive Stream API</name>
+	<name>Feed Archive Stream API</name>
 	<description>Implements a stream API for atom feeds</description>
 	<url>https://github.com/attiand/feed-archive-stream</url>
 
@@ -61,15 +61,16 @@
 		<!-- test -->
 
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>5.7.0</version>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
-			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-all</artifactId>
-			<version>1.3</version>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>3.17.2</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -107,7 +108,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.10.4</version>
+				<version>3.2.0</version>
 				<executions>
 					<execution>
 						<id>attach-javadocs</id>
